# rubiks

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  advanced_main.py  advanced_scanner.py  auto_calibrator.py  calibrated_live_scanner.py  color_calibrator.py  color_detector.py  color_trainer.py  color_trainer_hybrid.py  color_trainer_lab.py  complete_cube_scanner.py  cube_calibration.json  cube_scanner.py  cube_solver.py  cube_visualizer.py  demo.py  diagnose.py  docker-compose.yml  enhanced_color_detector.py  enhanced_cube_solver.py  enhanced_red_orange_detector.py  enhanced_solver.py  lab_classifier.py  lab_cube_scanner.py  live_cube_scanner.py  main.py  minimal_scanner.py  ml_color_detector.py  ml_color_metadata.json  ml_cube_scanner.py  ml_data_collector.py  (+15 more)
api/: config.py  main.py
api/models/: requests.py  responses.py
api/routes/: guided_solver.py  ml_model.py  solver.py
api/services/: guided_solver_service.py  ml_service.py  realtime_detector.py  solver_service.py
deploy/: rebuild.sh  start-docker.sh  stop-docker.sh
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: apiClient.js  mlApi.js  solverApi.js
frontend/src/components/: CameraFeed.css  CameraFeed.jsx  ColorPicker.css  ColorPicker.jsx  Cube3D.jsx  CubeFace.css  CubeFace.jsx  ErrorMessage.css  ErrorMessage.jsx  LoadingSpinner.css  LoadingSpinner.jsx  MoveValidator.css  MoveValidator.jsx  Navigation.css  Navigation.jsx  SolutionStep.css  SolutionStep.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: About.css  About.jsx  GuidedSolver.css  GuidedSolver.jsx  Home.css  Home.jsx  Scanner.css  Scanner.jsx  Solver.css  Solver.jsx
frontend/src/utils/: cubeUtils.js
tests/: __init__.py  conftest.py  test_api.py  test_cube_solver.py  test_enhanced_solver.py  test_guided_solver.py  test_integration.py  test_ml_color_detector.py  test_realtime_detector.py
